# curlaut

./: Cargo.toml  README.md  docker-compose.yaml  realm-export.json
src/: lib.rs
src/auth/: authenticator.rs  mod.rs
src/cli/: auth_mgmt.rs  clap_config.rs  mod.rs  request_executor.rs
src/keycloak/: keycloak_config.rs  keycloak_registry.rs  mod.rs
src/output/: mod.rs  stdio.rs
src/request/: mod.rs  request_executor.rs  request_spec.rs
tests/: cli_tests.rs
tests/cmd/config-add/: config-add.stdout  config-add.toml
tests/cmd/config-help/: config-help.stdout  config-help.toml
tests/cmd/config-list/: config-list.stdout  config-list.toml
tests/cmd/config-list/fs/.curlaut/: auth.yaml
tests/cmd/config-remove/: config-remove.stdout  config-remove.toml
tests/cmd/config-remove/fs/.curlaut/: auth.yaml
tests/cmd/config-set-default/: config-set-default.stdout  config-set-default.toml
tests/cmd/config-set-default/fs/.curlaut/: auth.yaml
tests/cmd/help/: help.stderr  help.toml
tests/cmd/help-flag/: help.toml
