[package]
name = "curlaut"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "curlaut"
path = "bin/curlaut.rs"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
clap_complete = "4.5.54"
reqwest = { version = "0.12.19", features = ["blocking", "json"] }
thiserror = "2.0.12"
url = "2.5.4"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
headers = "0.4.1"
